Upgrade to Quarkus 3 and Jakarta EE 10